--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 Hello World
 <!DOCTYPE html>
 <html>
+<head>
+    <script src="/src/hello.js">
+</head>
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
