--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@ Hello World
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="/src/hello.js">
+    <script src="/src/hello.js"></script>
 </head>
 <body>
 <h1>Hello World</h1>
