✓ Write the main page.

--- a/index.html
+++ b/index.html
@@ -3,4 +3,19 @@ layout: default
 title: Home
 ---
 
-<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+<article>
+    <p>Welcome to my website!</p>
+
+    <p>
+        My name is Johannes Qvarford and I'm a software developer/architect.
+    </p>
+
+    <p>
+        On this website you will (soon) find blog posts about my professional career, and my CV.
+        It is hosted on Github <a href="https://github.com/johannes-qvarford/johannes-qvarford.github.io">here</a>.
+    </p>
+
+    <p>
+        Hope you enjoy your stay!
+    </p>
+</article>
