✓ Friendlier home page.

--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@ title: Home
 ---
 
 <article>
-    <p>Welcome to my website!</p>
+    <h1>Welcome!</h1>
+
+    <img class="self-picture" src="/assets/me.jpg" alt="A picture of me.">
 
     <p>
         My name is Johannes Qvarford and I'm a software developer/architect.
     </p>
 
     <p>
-        On this website you will (soon) find blog posts about my professional career, and my CV.
-        It is hosted on Github <a href="https://github.com/johannes-qvarford/johannes-qvarford.github.io">here</a>.
+        On this site you will (soon) find blog posts about my professional career, and my CV.
+        The site is hosted on Github <a href="https://github.com/johannes-qvarford/johannes-qvarford.github.io">here</a>.
     </p>
 
     <p>
