✓ Write descriptive alt-text ✓ Update link text to be read independantly.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Home
 <article>
     <h1>Welcome!</h1>
 
-    <img class="self-picture" src="/assets/me.jpg" alt="A picture of me.">
+    <img class="self-picture" src="/assets/me.jpg" title="A picture of this site's author: Johannes Qvarford.">
 
     <p>
         My name is Johannes Qvarford and I'm a software developer/architect.
@@ -14,7 +14,7 @@ title: Home
 
     <p>
         On this site you will (soon) find blog posts about my professional career, and my CV.
-        The site is hosted on Github <a href="https://github.com/johannes-qvarford/johannes-qvarford.github.io">here</a>.
+        Here is <a href="https://github.com/johannes-qvarford/johannes-qvarford.github.io">the site's Github repository.</a>.
     </p>
 
     <p>
