--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 ---
 layout: default
 title: Home
+last_modified_at: 2020-08-16
 ---
 
 <article>
-    <h1>Welcome!</h1>
+    <h2>Welcome!</h2>
 
     <img class="self-picture" src="/assets/me.jpg" title="A picture of this site's author: Johannes Qvarford.">
 
