Breaking systems into modules

--- a/recommendations/index.html
+++ b/recommendations/index.html
@@ -5,7 +5,9 @@ last_modified_at: 2022-03-04
 recommendations:
   - name: Breaking systems into modules
     link: https://www.tedinski.com/2018/08/14/modularity.html
-    review: My review
+    review: |
+      A good overview of how you can describe modules in terms of incoming/public/private dependencies, public abstraction and private implemantation.
+      It argues that making the smallest possible modules isn't always desirable because then you increase complexity in the dependency graph between modules.
 ---
 
 <article>
