Data as a mediator between computation and state

--- a/recommendations/index.html
+++ b/recommendations/index.html
@@ -14,7 +14,20 @@ recommendations:
       Taking rules to their logical extremes seldom leads to good code.
       The article brings up the problems with fads and how most advice doesn't apply 100% of the time.
       The question remains on how to teach junior programmers this, since it can take a lot of time to internalize very loose rules.
+  - name: Data as a mediator between computation and state
+    link: https://www.tedinski.com/2018/08/28/using-data-to-mutate-state.html
+    review: |
+      Mutations can be described as actions (data) which can make systems easier to test, and can make it easier to introduce changes to cross-cutting concerns.
+      
+
+
 ---
+<!--
+  - name: 
+    link: 
+   review: |
+
+-->
 
 <article>
     <h2>{{ page.title }}</h2>
@@ -46,8 +59,6 @@ recommendations:
 <!--
   TODO:
 
-https://www.tedinski.com/2018/08/14/modularity.html
-https://www.tedinski.com/2018/08/28/using-data-to-mutate-state.html
 https://www.tedinski.com/2019/04/02/solid-critique.html
 https://www.tedinski.com/2018/05/08/case-study-unix-philosophy.html
 https://www.tedinski.com/2018/02/27/the-expression-problem.html
