Deconstructing SOLID design principles

--- a/recommendations/index.html
+++ b/recommendations/index.html
@@ -19,6 +19,11 @@ recommendations:
     review: |
       Mutations can be described as actions (data) which can make systems easier to test, and can make it easier to introduce changes to cross-cutting concerns.
       
+  - name: Deconstructing SOLID design principles
+    link: https://www.tedinski.com/2019/04/02/solid-critique.html
+    review: |
+      SOLID principles are mostly relevant on system boundaries, yet people advocate for using them everywhere.
+
 
 
 ---
@@ -59,7 +64,6 @@ recommendations:
 <!--
   TODO:
 
-https://www.tedinski.com/2019/04/02/solid-critique.html
 https://www.tedinski.com/2018/05/08/case-study-unix-philosophy.html
 https://www.tedinski.com/2018/02/27/the-expression-problem.html
 https://cpsc.yale.edu/epigrams-programming
