Deconstructing the "Unix philosophy"

--- a/recommendations/index.html
+++ b/recommendations/index.html
@@ -23,7 +23,14 @@ recommendations:
     link: https://www.tedinski.com/2019/04/02/solid-critique.html
     review: |
       SOLID principles are mostly relevant on system boundaries, yet people advocate for using them everywhere.
-
+  - name: Deconstructing the "Unix philosophy"
+    link: https://www.tedinski.com/2018/05/08/case-study-unix-philosophy.html
+    review: |
+      The article covers the advantages of "text as a universal interface" and the compasability of unix commands.
+      It also brings up that the division of commands may make sense from a developer point of view,
+      but interactive users are more task-oriented.
+      They don't want to have to cobble together often non-reusable shell scripts for the kind of tasks they are interested in.
+      It also contrasts "text as a universal interface" with "object as a universal interface" from PowerShell.
 
 
 ---
@@ -31,7 +38,7 @@ recommendations:
   - name: 
     link: 
    review: |
-
+    todo
 -->
 
 <article>
@@ -64,7 +71,6 @@ recommendations:
 <!--
   TODO:
 
-https://www.tedinski.com/2018/05/08/case-study-unix-philosophy.html
 https://www.tedinski.com/2018/02/27/the-expression-problem.html
 https://cpsc.yale.edu/epigrams-programming
 https://www.tedinski.com/2019/05/08/unexpected-moral-reasoning.html
