Design duality and the expression problem

--- a/recommendations/index.html
+++ b/recommendations/index.html
@@ -31,14 +31,19 @@ recommendations:
       but interactive users are more task-oriented.
       They don't want to have to cobble together often non-reusable shell scripts for the kind of tasks they are interested in.
       It also contrasts "text as a universal interface" with "object as a universal interface" from PowerShell.
-
+  - name: Design duality and the expression problem
+    link: https://www.tedinski.com/2018/02/27/the-expression-problem.html
+    review: |
+      APIs can be categorised based on if they guarantee extensibility through additional variants, operations or neither.
+      Whatever extensibility category is promised disables adding internal changes in that category without breaking contracts.
+      ADTs makes the fewest amount of guarantees and therefor enables the greatest internal flexibility if that is desired.
 
 ---
 <!--
   - name: 
-    link: 
-   review: |
-    todo
+link: 
+review: |
+  todo
 -->
 
 <article>
@@ -71,8 +76,7 @@ recommendations:
 <!--
   TODO:
 
-https://www.tedinski.com/2018/02/27/the-expression-problem.html
-https://cpsc.yale.edu/epigrams-programming
+
 https://www.tedinski.com/2019/05/08/unexpected-moral-reasoning.html
 https://www.cs.oberlin.edu/~jwalker/langDesign/OO_vs_Fun/notes.html
 https://lexi-lambda.github.io/blog/2019/11/05/parse-don-t-validate/
