Epigrams in Programming

--- a/recommendations/index.html
+++ b/recommendations/index.html
@@ -37,7 +37,12 @@ recommendations:
       APIs can be categorised based on if they guarantee extensibility through additional variants, operations or neither.
       Whatever extensibility category is promised disables adding internal changes in that category without breaking contracts.
       ADTs makes the fewest amount of guarantees and therefor enables the greatest internal flexibility if that is desired.
-
+  - name: Epigrams in Programming
+    link: https://cpsc.yale.edu/epigrams-programming
+    review: |
+      Some fun ideas to think about. My favourite is "A LISP programmer knows the value of everything, but the cost of nothing."
+      It highlights that building extensible solutions in programming often involves disregarding runtime efficiency to a certain degree.
+      A very static program can be written very efficiently, but it may not be easy to evolve it in the direction that stakeholders need it to without rewrites.
 ---
 <!--
   - name: 
