Patterns vs. Higher Order Functions

--- a/recommendations/index.html
+++ b/recommendations/index.html
@@ -43,6 +43,10 @@ recommendations:
       Some fun ideas to think about. My favourite is "A LISP programmer knows the value of everything, but the cost of nothing."
       It highlights that building extensible solutions in programming often involves disregarding runtime efficiency to a certain degree.
       A very static program can be written very efficiently, but it may not be easy to evolve it in the direction that stakeholders need it to without rewrites.
+  - name: Patterns vs. Higher Order Functions
+    link: https://www.cs.oberlin.edu/~jwalker/langDesign/OO_vs_Fun/notes.html
+    review: |
+      Patterns and higher-order functions are two concepts used to describe the same underlying concept in functional programming and object-oriented programming.
 ---
 <!--
   - name: 
@@ -82,8 +86,6 @@ review: |
   TODO:
 
 
-https://www.tedinski.com/2019/05/08/unexpected-moral-reasoning.html
-https://www.cs.oberlin.edu/~jwalker/langDesign/OO_vs_Fun/notes.html
 https://lexi-lambda.github.io/blog/2019/11/05/parse-don-t-validate/
 https://www.tedinski.com/2019/03/19/testing-at-the-boundaries.html
 https://www.tedinski.com/2018/10/09/relationship-induction-and-tests.html
