Testing, induction, and mocks

--- a/recommendations/index.html
+++ b/recommendations/index.html
@@ -58,12 +58,17 @@ recommendations:
     review: |
       The article brings up that when unit testing, it doesn't usually make sense to test every class in complete isolation.
       It is also critical of how the TDD concept has been warped over the years and that it started out as much more reasonable.
+  - name: Testing, induction, and mocks
+    link: https://www.tedinski.com/2018/10/09/relationship-induction-and-tests.html
+    review: |
+      A critical critique of mocking and how it should be a last resort.
+      Code should be structured to make mocking next to uneccessary in unit tests.
 ---
 <!--
   - name: 
-link: 
-review: |
-  todo
+    link: 
+    review: |
+      todo
 -->
 
 <article>
@@ -96,7 +101,6 @@ review: |
 <!--
   TODO:
 
-https://www.tedinski.com/2018/10/09/relationship-induction-and-tests.html
 https://www.parsonsmatt.org/2017/10/11/type_safety_back_and_forth.html
 https://www.tedinski.com/2018/12/05/types-as-design-tool.html
 
