Types are the basic tool of software design

--- a/recommendations/index.html
+++ b/recommendations/index.html
@@ -63,13 +63,13 @@ recommendations:
     review: |
       A critical critique of mocking and how it should be a last resort.
       Code should be structured to make mocking next to uneccessary in unit tests.
----
-<!--
-  - name: 
-    link: 
+  - name: Types are the basic tool of software design
+    link: https://www.tedinski.com/2018/12/05/types-as-design-tool.html
     review: |
-      todo
--->
+      Functions with a high-level of generality can sometimes make the implementation hard to write incorrectly,
+      since an incorrect implementation would have to make assumptions that weren't part of the signature.
+---
+
 
 <article>
     <h2>{{ page.title }}</h2>
@@ -101,8 +101,8 @@ recommendations:
 <!--
   TODO:
 
-https://www.parsonsmatt.org/2017/10/11/type_safety_back_and_forth.html
-https://www.tedinski.com/2018/12/05/types-as-design-tool.html
+
+
 
 https://www.oreilly.com/library/view/designing-data-intensive-applications/9781491903063/
 https://www.dddcommunity.org/book/evans_2003/
