Added recs to look into.

--- a/recommendations/index.html
+++ b/recommendations/index.html
@@ -136,5 +136,13 @@ https://www.youtube.com/watch?v=srQt1NAHYC0
 
 Extra (preserve):
 https://www.amazon.com/Working-Effectively-Legacy-Michael-Feathers/dp/0131177052
+https://www.cs.princeton.edu/~bwk/tpop.webpage/
+https://www.amazon.com/Philosophy-Software-Design-John-Ousterhout/dp/1732102201
 
+Evaluate:
+https://m.facebook.com/nt/screen/?params=%7B%22note_id%22%3A1025642017884545%7D&path=%2Fnotes%2Fnote%2F
+https://www.cs.bme.hu/~friedl/alg/knuth_song_complexity.pdf
+https://www.academia.edu/4330409/Object_oriented_programming_an_objective_sense_of_style
+https://www.amazon.com/dp/B07LCM8RG2/
+https://www.amazon.com/Refactoring-Patterns-Joshua-Kerievsky/dp/0321213351
 -->
