Designing Data-Intensive Applications

--- a/recommendations/index.html
+++ b/recommendations/index.html
@@ -68,8 +68,17 @@ recommendations:
     review: |
       Functions with a high-level of generality can sometimes make the implementation hard to write incorrectly,
       since an incorrect implementation would have to make assumptions that weren't part of the signature.
+  - name: Designing Data-Intensive Applications
+    link: https://www.oreilly.com/library/view/designing-data-intensive-applications/9781491903063/
+    review: |
+      This book goes over a lot of different alternatives to storing and managing data, and discussing their trade-offs in large systems with high performance requirements.
 ---
-
+<!--
+  - name: T
+    link: T
+    review: |
+      T
+-->
 
 <article>
     <h2>{{ page.title }}</h2>
