Domain-Driven Design: Tackling Complexity in the Heart of Software

--- a/recommendations/index.html
+++ b/recommendations/index.html
@@ -72,6 +72,13 @@ recommendations:
     link: https://www.oreilly.com/library/view/designing-data-intensive-applications/9781491903063/
     review: |
       This book goes over a lot of different alternatives to storing and managing data, and discussing their trade-offs in large systems with high performance requirements.
+  - name: "Domain-Driven Design: Tackling Complexity in the Heart of Software"
+    link: https://www.dddcommunity.org/book/evans_2003/
+    review: |
+      This book opened my eyes to how programming fits into organisations and their needs.
+      Not as something alien to be cornered off from the organisation, but as something that should constantly be involved.
+      It showed me that creativity and empathy can be really important for a programmer.
+
 ---
 <!--
   - name: T
@@ -110,10 +117,6 @@ recommendations:
 <!--
   TODO:
 
-
-
-
-https://www.oreilly.com/library/view/designing-data-intensive-applications/9781491903063/
 https://www.dddcommunity.org/book/evans_2003/
 https://www.oreilly.com/library/view/effective-java/9780134686097/
 https://www.oreilly.com/library/view/extreme-programming-explained/0321278658/
