--- a/recommendations/index.html
+++ b/recommendations/index.html
@@ -79,6 +79,12 @@ recommendations:
       Not as something alien to be cornered off from the organisation, but as something that should constantly be involved.
       It showed me that creativity and empathy can be really important for a programmer.
 
+  - name: Effective Java
+    link: https://www.oreilly.com/library/view/effective-java/9780134686097/
+    review: |
+      A book that really highlightes that to get the most from a programming languages you need to consider its' features as part of greater whole.
+      Some features are useful more often than others, and some have even become obsolete over time.
+      Some patterns aren't explicit language features, but should be treated as if they were.
 ---
 <!--
   - name: T
@@ -86,6 +92,7 @@ recommendations:
     review: |
       T
 -->
+
 
 <article>
     <h2>{{ page.title }}</h2>
@@ -117,8 +124,6 @@ recommendations:
 <!--
   TODO:
 
-https://www.dddcommunity.org/book/evans_2003/
-https://www.oreilly.com/library/view/effective-java/9780134686097/
 https://www.oreilly.com/library/view/extreme-programming-explained/0321278658/
 https://www.amazon.com/Large-Scale-Software-Design-John-Lakos/dp/0201633620
 https://jcip.net/
