Large-Scale C++ Software Design

--- a/recommendations/index.html
+++ b/recommendations/index.html
@@ -88,9 +88,14 @@ recommendations:
   - name: "Extreme Programming Explained: Embrace Change, Second Edition"
     link: https://www.oreilly.com/library/view/extreme-programming-explained/0321278658/
     review: |
-      This book gave me an insight into how it is to truly work iteratively, and what a great concept that is.
+      This book gave me insight into how it is to truly work iteratively, and what a great concept that is.
       It helped me take one step at a time when coding, instead of attempting to make enourmous changes that were never really done and slow to test.
       It also opened my eyes to why we write user stories, and how important users really are.
+  - name: Large-Scale C++ Software Design
+    link: https://www.amazon.com/Large-Scale-Software-Design-John-Lakos/dp/0201633620
+    review: |
+      This book opened my eyes to how seemingly small design changes can reduce compile times for C++.
+      It also taught me the importance of designing maintainable APIs.
 ---
 <!--
   - name: T
@@ -101,7 +106,6 @@ recommendations:
 <!--
   TODO:
 
-https://www.amazon.com/Large-Scale-Software-Design-John-Lakos/dp/0201633620
 https://jcip.net/
 https://www.poodr.com/
 https://www.lua.org/pil/
