Java Concurrency in Practice

--- a/recommendations/index.html
+++ b/recommendations/index.html
@@ -96,6 +96,12 @@ recommendations:
     review: |
       This book opened my eyes to how seemingly small design changes can reduce compile times for C++.
       It also taught me the importance of designing maintainable APIs.
+  - name: Java Concurrency in Practice
+    link: https://jcip.net/
+    review: |
+      A really great overview about the concurrency primitives available in Java.
+      It also shows the advantages of using immutable data structures for concurrency
+      instead of sharing mutable state.
 ---
 <!--
   - name: T
@@ -106,7 +112,7 @@ recommendations:
 <!--
   TODO:
 
-https://jcip.net/
+
 https://www.poodr.com/
 https://www.lua.org/pil/
 https://www.oreilly.com/library/view/the-art-of/9781449318482/
