Practical Object-Oriented Design, An Agile Primer Using Ruby.

--- a/recommendations/index.html
+++ b/recommendations/index.html
@@ -102,6 +102,10 @@ recommendations:
       A really great overview about the concurrency primitives available in Java.
       It also shows the advantages of using immutable data structures for concurrency
       instead of sharing mutable state.
+  - name: Practical Object-Oriented Design, An Agile Primer Using Ruby
+    link: https://www.poodr.com/
+    review: |
+      This book presents a good example of how to structure object-oriented code, and how to deal with testing in dynamic languages.
 ---
 <!--
   - name: T
@@ -113,7 +117,7 @@ recommendations:
   TODO:
 
 
-https://www.poodr.com/
+
 https://www.lua.org/pil/
 https://www.oreilly.com/library/view/the-art-of/9781449318482/
 https://www.oreilly.com/library/view/mythical-man-month-the/0201835959/
