Programming in Lua

--- a/recommendations/index.html
+++ b/recommendations/index.html
@@ -106,6 +106,12 @@ recommendations:
     link: https://www.poodr.com/
     review: |
       This book presents a good example of how to structure object-oriented code, and how to deal with testing in dynamic languages.
+  - name: Programming in Lua 
+    link: https://www.lua.org/pil/
+    review: |
+      My first introduction to a dynamic programming languages.
+      I was moved by how effortlessly the author introduced concepts and built on top of those concepts without bringing up to much at the same time.
+      It also got me to appreciate the implementation simplicity of Lua.
 ---
 <!--
   - name: T
@@ -118,7 +124,7 @@ recommendations:
 
 
 
-https://www.lua.org/pil/
+
 https://www.oreilly.com/library/view/the-art-of/9781449318482/
 https://www.oreilly.com/library/view/mythical-man-month-the/0201835959/
 https://pragprog.com/titles/tpp20/the-pragmatic-programmer-20th-anniversary-edition/
