Mythical Man-Month, The: Essays on Software Engineering

--- a/recommendations/index.html
+++ b/recommendations/index.html
@@ -112,6 +112,11 @@ recommendations:
       My first introduction to a dynamic programming languages.
       I was moved by how effortlessly the author introduced concepts and built on top of those concepts without bringing up to much at the same time.
       It also got me to appreciate the implementation simplicity of Lua.
+  - name: "Mythical Man-Month, The: Essays on Software Engineering"
+    link: https://www.oreilly.com/library/view/mythical-man-month-the/0201835959/
+    review: |
+      A good historical piece of issues that plagued programming in 19th centuary, and that mostly still exists today but in a different shape.
+      The <a href="https://en.wikipedia.org/wiki/Second-system_effect">second system effect</a> still lead to tools today that bite off more than they can chew. 
 ---
 <!--
   - name: T
@@ -121,12 +126,6 @@ recommendations:
 -->
 <!--
   TODO:
-
-
-
-
-https://www.oreilly.com/library/view/the-art-of/9781449318482/
-https://www.oreilly.com/library/view/mythical-man-month-the/0201835959/
 https://pragprog.com/titles/tpp20/the-pragmatic-programmer-20th-anniversary-edition/
 https://sandimetz.com/99bottles
 
