The Pragmatic Programmer

--- a/recommendations/index.html
+++ b/recommendations/index.html
@@ -116,7 +116,11 @@ recommendations:
     link: https://www.oreilly.com/library/view/mythical-man-month-the/0201835959/
     review: |
       A good historical piece of issues that plagued programming in 19th centuary, and that mostly still exists today but in a different shape.
-      The <a href="https://en.wikipedia.org/wiki/Second-system_effect">second system effect</a> still lead to tools today that bite off more than they can chew. 
+      The <a href="https://en.wikipedia.org/wiki/Second-system_effect">second system effect</a> still lead to tools today that bite off more than they can chew.
+  - name: The Pragmatic Programmer
+    link: https://pragprog.com/titles/tpp20/the-pragmatic-programmer-20th-anniversary-edition/
+    review: |
+      A goodie bag of advice around software development that every software developer should read.
 ---
 <!--
   - name: T
@@ -126,7 +130,6 @@ recommendations:
 -->
 <!--
   TODO:
-https://pragprog.com/titles/tpp20/the-pragmatic-programmer-20th-anniversary-edition/
 https://sandimetz.com/99bottles
 
 https://www.youtube.com/watch?v=r8mtXJh3hzM
