99 Bottles of OOP

--- a/recommendations/index.html
+++ b/recommendations/index.html
@@ -121,6 +121,10 @@ recommendations:
     link: https://pragprog.com/titles/tpp20/the-pragmatic-programmer-20th-anniversary-edition/
     review: |
       A goodie bag of advice around software development that every software developer should read.
+  - name: 99 Bottles of OOP
+    link: https://sandimetz.com/99bottles
+    review: |
+      A great book focused around teaching object-oriented design, how it relates to TDD, and how it's better to duplicate code than use the wrong abstraction.
 ---
 <!--
   - name: T
