David Schmitz - 10 Tips for failing badly at Microservices

--- a/recommendations/index.html
+++ b/recommendations/index.html
@@ -125,6 +125,10 @@ recommendations:
     link: https://sandimetz.com/99bottles
     review: |
       A great book focused around teaching object-oriented design, how it relates to TDD, and how it's better to duplicate code than use the wrong abstraction.
+  - name: David Schmitz - 10 Tips for failing badly at Microservices
+    link: https://www.youtube.com/watch?v=r8mtXJh3hzM
+    review: |
+      A funny presentation about how certain decisions can hurt more than others in preventing successuful adoption of microservices.
 ---
 <!--
   - name: T
@@ -135,7 +139,7 @@ recommendations:
 <!--
   TODO:
 
-https://www.youtube.com/watch?v=r8mtXJh3hzM
+
 https://www.youtube.com/watch?v=tMW08JkFrBA
 https://www.youtube.com/watch?v=r8mtXJh3hzM
 https://www.youtube.com/watch?v=VDfX44fZoMc
