YOW! 2013 - The SOLID Design Principles Deconstructed

--- a/recommendations/index.html
+++ b/recommendations/index.html
@@ -129,6 +129,11 @@ recommendations:
     link: https://www.youtube.com/watch?v=r8mtXJh3hzM
     review: |
       A funny presentation about how certain decisions can hurt more than others in preventing successuful adoption of microservices.
+  - name: YOW! 2013 - The SOLID Design Principles Deconstructed
+    link: https://www.youtube.com/watch?v=tMW08JkFrBA
+    review: |
+      The SOLID design principles as we know them aren't that useful.
+      The author breaks them down and proposes alternatives.
 ---
 <!--
   - name: T
