Integrated Tests Are A Scam

--- a/recommendations/index.html
+++ b/recommendations/index.html
@@ -134,6 +134,10 @@ recommendations:
     review: |
       The SOLID design principles as we know them aren't that useful.
       The author breaks them down and proposes alternatives.
+  - name: Integrated Tests Are A Scam
+    link: https://www.youtube.com/watch?v=VDfX44fZoMc
+    review: |
+      A somewhat hyperbolic talk about how integration testing between systems often break, and should in many cases be replaced with contract testing.
 ---
 <!--
   - name: T
@@ -144,10 +148,6 @@ recommendations:
 <!--
   TODO:
 
-
-https://www.youtube.com/watch?v=tMW08JkFrBA
-https://www.youtube.com/watch?v=r8mtXJh3hzM
-https://www.youtube.com/watch?v=VDfX44fZoMc
 https://www.youtube.com/watch?v=rX0ItVEVjHc
 https://www.youtube.com/watch?v=Gzj723LkRJY
 https://www.youtube.com/watch?v=lw6TaiXzHAE
