CppCon 2014 - Data-Oriented Design and C++

--- a/recommendations/index.html
+++ b/recommendations/index.html
@@ -138,6 +138,10 @@ recommendations:
     link: https://www.youtube.com/watch?v=VDfX44fZoMc
     review: |
       A somewhat hyperbolic talk about how integration testing between systems often break, and should in many cases be replaced with contract testing.
+  - name: CppCon 2014 - Data-Oriented Design and C++
+    link: https://www.youtube.com/watch?v=rX0ItVEVjHc
+    review: |
+      A very though-provoking presentation about data-oriented design and how it might be useful for high-performance application.
 ---
 <!--
   - name: T
@@ -148,7 +152,7 @@ recommendations:
 <!--
   TODO:
 
-https://www.youtube.com/watch?v=rX0ItVEVjHc
+
 https://www.youtube.com/watch?v=Gzj723LkRJY
 https://www.youtube.com/watch?v=lw6TaiXzHAE
 https://www.youtube.com/watch?v=QyJZzq0v7Z4
