Ruby on Rails demo

--- a/recommendations/index.html
+++ b/recommendations/index.html
@@ -142,6 +142,10 @@ recommendations:
     link: https://www.youtube.com/watch?v=rX0ItVEVjHc
     review: |
       A very though-provoking presentation about data-oriented design and how it might be useful for high-performance application.
+  - name: Ruby on Rails demo
+    link: https://www.youtube.com/watch?v=Gzj723LkRJY
+    review: |
+      A revolutionary presentation at the time about convention-over-configuration and how to quickly develop seemingly simple applications such as CRUD and blogs.
 ---
 <!--
   - name: T
@@ -152,8 +156,6 @@ recommendations:
 <!--
   TODO:
 
-
-https://www.youtube.com/watch?v=Gzj723LkRJY
 https://www.youtube.com/watch?v=lw6TaiXzHAE
 https://www.youtube.com/watch?v=QyJZzq0v7Z4
 https://www.youtube.com/watch?v=jlPaby7suOc
