OOPSLA Conference: Growing a Language

--- a/recommendations/index.html
+++ b/recommendations/index.html
@@ -146,6 +146,11 @@ recommendations:
     link: https://www.youtube.com/watch?v=Gzj723LkRJY
     review: |
       A revolutionary presentation at the time about convention-over-configuration and how to quickly develop seemingly simple applications such as CRUD and blogs.
+  - name: "OOPSLA Conference: Growing a Language"
+    link: https://www.youtube.com/watch?v=lw6TaiXzHAE
+    review: |
+      A presentation about how to develop the Java programming language in the future.
+      It argues that an overly small language may not be that useful to many people.
 ---
 <!--
   - name: T
