Why Isn't Functional Programming the Norm?

--- a/recommendations/index.html
+++ b/recommendations/index.html
@@ -151,6 +151,10 @@ recommendations:
     review: |
       A presentation about how to develop the Java programming language in the future.
       It argues that an overly small language may not be that useful to many people.
+  - name: Why Isn't Functional Programming the Norm?
+    link: https://www.youtube.com/watch?v=QyJZzq0v7Z4
+    review: |
+      A presentation about the history of object-oriented programming and functional programming and how they diverged.
 ---
 <!--
   - name: T
@@ -161,8 +165,6 @@ recommendations:
 <!--
   TODO:
 
-https://www.youtube.com/watch?v=lw6TaiXzHAE
-https://www.youtube.com/watch?v=QyJZzq0v7Z4
 https://www.youtube.com/watch?v=jlPaby7suOc
 https://www.youtube.com/watch?v=LhoLuui9gX8
 https://www.youtube.com/watch?v=nKyF8fzed0w
