Every Clojure Talk Ever

--- a/recommendations/index.html
+++ b/recommendations/index.html
@@ -155,6 +155,10 @@ recommendations:
     link: https://www.youtube.com/watch?v=QyJZzq0v7Z4
     review: |
       A presentation about the history of object-oriented programming and functional programming and how they diverged.
+  - name: Every Clojure Talk Ever
+    link: https://www.youtube.com/watch?v=jlPaby7suOc
+    review: |
+      This is a pretty funny talk about hype-driven development in Clojure.
 ---
 <!--
   - name: T
@@ -165,7 +169,7 @@ recommendations:
 <!--
   TODO:
 
-https://www.youtube.com/watch?v=jlPaby7suOc
+
 https://www.youtube.com/watch?v=LhoLuui9gX8
 https://www.youtube.com/watch?v=nKyF8fzed0w
 https://www.youtube.com/watch?v=csyL9EC0S0c
