Building a psychologically safe workplace

--- a/recommendations/index.html
+++ b/recommendations/index.html
@@ -159,6 +159,12 @@ recommendations:
     link: https://www.youtube.com/watch?v=jlPaby7suOc
     review: |
       This is a pretty funny talk about hype-driven development in Clojure.
+  - name: Building a psychologically safe workplace
+    link: https://www.youtube.com/watch?v=LhoLuui9gX8
+    review: |
+      It's important that people feel safe that they can bring up issues.
+      If not for moral reasons, then for the fact that otherwise people don't bring up problems.
+      Those problems sometimes become really big, and we really want to solve them before that happens.
 ---
 <!--
   - name: T
