Programming is terrible — Lessons learned from a life wasted

--- a/recommendations/index.html
+++ b/recommendations/index.html
@@ -165,6 +165,10 @@ recommendations:
       It's important that people feel safe that they can bring up issues.
       If not for moral reasons, then for the fact that otherwise people don't bring up problems.
       Those problems sometimes become really big, and we really want to solve them before that happens.
+  - name: Programming is terrible — Lessons learned from a life wasted
+    link: https://www.youtube.com/watch?v=csyL9EC0S0c
+    review: |
+      A cynical presentation about a lot of different programming aspects, mostly realted to social issues.
 ---
 <!--
   - name: T
@@ -176,9 +180,7 @@ recommendations:
   TODO:
 
 
-https://www.youtube.com/watch?v=LhoLuui9gX8
-https://www.youtube.com/watch?v=nKyF8fzed0w
-https://www.youtube.com/watch?v=csyL9EC0S0c
+
 https://www.youtube.com/watch?v=lw6TaiXzHAE
 https://www.youtube.com/watch?v=QyJZzq0v7Z4
 https://www.youtube.com/watch?v=jlPaby7suOc
